<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="obj"
            type="com.techjini.emicalculator.emicalculator.EMICalculatorModel" />

        <variable
            name="handler"
            type="android.view.View.OnClickListener" />

        <import type="com.techjini.emicalculator.emicalculator.CommonUtils" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#424242"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_loan_emi"
                    android:textColor="#212121"
                    android:textSize="14sp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/Rs(String.valueOf(CommonUtils.getDecimalTwoDig(obj.monthlyEMI)))}"
                    android:textColor="#212121"
                    android:textSize="30sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_month"
                    android:textColor="#212121"
                    android:textSize="12sp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ScrollView
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FAFAFA">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textColor="#212121"
                    android:layout_marginBottom="2dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:weightSum="3"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <CheckBox
                        android:id="@+id/monthly"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/monthly"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/quarterly"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/quarterly"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/half_yearly"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/halfYearly"
                        android:textSize="18sp" />
                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="28dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp">


                        <LinearLayout
                            android:id="@+id/loan_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="28dp"
                                android:orientation="horizontal">

                                <android.support.v7.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginRight="10dp"
                                    android:text="@string/loan_amount"
                                    android:textColor="#212121"
                                    android:textSize="16sp"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:gravity="end"
                                    android:orientation="horizontal">

                                    <android.support.v7.widget.AppCompatEditText
                                        android:id="@+id/selected_loan_amount"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_horizontal"
                                        android:imeOptions="actionNext"
                                        android:inputType="number"
                                        android:minWidth="58dp"
                                        android:text="@{String.valueOf(obj.selectedLoanAmount)}"
                                        android:textColor="#004D40"
                                        android:textSize="16sp"
                                        android:paddingTop="6dp"
                                        android:paddingBottom="6dp"
                                        android:paddingLeft="20dp"
                                        android:paddingRight="20dp"
                                        android:background="@drawable/border"/>

                                    <android.support.v7.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:text="@{@string/Rs(String.valueOf(obj.maxLaonAmount))}"
                                        android:textSize="12dp"/>
                                </LinearLayout>


                            </LinearLayout>

                            <SeekBar
                                android:id="@+id/loan_seekbar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="22dp"
                                android:max="@{obj.maxLaonAmountValue}"
                                android:maxHeight="4dp"
                                android:minHeight="4dp"
                                android:progressDrawable="@drawable/seekbar_progress_drawable"
                                android:thumb="@drawable/seekbar_thumb" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tenure_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="47dp"
                                android:orientation="horizontal">

                                <android.support.v7.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginRight="10dp"
                                    android:text="@string/tenure"
                                    android:textColor="#37474F"
                                    android:textSize="16sp"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:gravity="end"
                                    android:orientation="horizontal">

                                    <android.support.v7.widget.AppCompatEditText
                                        android:id="@+id/selected_tenure"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_horizontal"
                                        android:imeOptions="actionNext"
                                        android:inputType="number"
                                        android:minWidth="58dp"
                                        android:text="@{String.valueOf(obj.selectedTenure)}"
                                        android:textColor="#212121"
                                        android:textSize="16sp"
                                        android:paddingTop="6dp"
                                        android:paddingBottom="6dp"
                                        android:paddingLeft="20dp"
                                        android:paddingRight="20dp"
                                        android:background="@drawable/border"/>

                                    <android.support.v7.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:text="@{String.valueOf(obj.maxTenure)}"
                                        android:textSize="12dp"/>
                                </LinearLayout>


                            </LinearLayout>

                            <SeekBar
                                android:id="@+id/tenure_seekbar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="22dp"
                                android:max="@{obj.maxTenure}"
                                android:maxHeight="4dp"
                                android:minHeight="4dp"
                                android:progressDrawable="@drawable/seekbar_progress_drawable"
                                android:splitTrack="false"
                                android:thumb="@drawable/seekbar_thumb" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/roi_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="47dp"
                                android:orientation="horizontal">

                                <android.support.v7.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginRight="10dp"
                                    android:text="@string/rateOfInterest"
                                    android:textColor="#212121"
                                    android:textSize="16sp"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:gravity="end"
                                    android:orientation="horizontal">

                                    <android.support.v7.widget.AppCompatEditText
                                        android:id="@+id/selected_roi"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_horizontal"
                                        android:imeOptions="actionGo"
                                        android:inputType="numberDecimal"
                                        android:minWidth="58dp"
                                        android:text="@{ String.valueOf(obj.selectedROI)}"
                                        android:textColor="#212121"
                                        android:textSize="16sp"
                                        android:paddingTop="6dp"
                                        android:paddingBottom="6dp"
                                        android:paddingLeft="20dp"
                                        android:paddingRight="20dp"
                                        android:background="@drawable/border"/>

                                    <android.support.v7.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="10dp"
                                        android:text="@{@string/max_roi(String.valueOf(obj.maxROI))}"
                                        android:textSize="12sp"/>
                                </LinearLayout>


                            </LinearLayout>

                            <SeekBar
                                android:id="@+id/roi_seekbar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="22dp"
                                android:maxHeight="4dp"
                                android:minHeight="4dp"
                                android:progressDrawable="@drawable/seekbar_progress_drawable"
                                android:splitTrack="false"
                                android:thumb="@drawable/seekbar_thumb" />
                        </LinearLayout>
                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>